--- a/xiaomicss.css
+++ b/xiaomicss.css
@@ -1,4 +1,4 @@
-*{
+﻿*{
     padding: 0;
     margin: 0;
     user-select: none;
@@ -16,7 +16,6 @@ img{
     display: block;
     outline: none;
 }
-html,body{height: 500%}
 ol,ul{
     list-style: none;
 }
